--- a/styles/carossel.css
+++ b/styles/carossel.css
@@ -23,3 +23,63 @@
     display: none;
 }
 
+.swiper-pag {
+    position: initial;
+    margin-top: .5em;
+    margin-bottom: .8em;
+    text-align: center;
+}
+
+.card {
+    border-radius: 10px;
+    background: var(--cor-do-cabecalho);
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+    margin: 1em;
+    padding: 1em;
+}
+
+.descricao__titulo {
+    font-size: 1rem;
+    color: var(--laranja);
+    font-weight: 700;
+}
+
+.descricao__titulo-livro {
+    color: var(--azul);
+    font-weight: 700;
+    font-size: 1.125rem;
+    margin: 0.5em 0em;
+}
+
+.descricao__texto {
+    font-size: .875rem;
+    font-weight: 400;
+
+}
+
+.card__descricao {
+    display: flex;
+    justify-content: space-between;
+}
+
+/*.descricao__imagem {
+    height: auto; 
+    object-fit: cover; 
+}
+*/
+
+
+.card__botoes {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 1em;
+}
+
+.botoes__ancora {
+    background-color: var(--laranja);
+    padding: 1em 2.2em;
+    font-size: 1rem;
+    font-weight: 700;
+    color: var(--cor-do-cabecalho);
+    text-decoration: none;
+}
