--- a/styles/banner.css
+++ b/styles/banner.css
@@ -1,6 +1,6 @@
 .banner {
     background: var(--azul-degrade);
-    color: var(--cor-do-cabecalho);
+    color: var(--branco);
     text-align: center;
     padding: 2.5em 2em;
 }
@@ -17,16 +17,16 @@
 }
 
 .banner__pesquisa {
-    border: 1px solid var(--cor-do-cabecalho);
+    border: 1px solid var(--branco);
     background: transparent;
     border-radius: 24px;
     width: 100%;
     padding: 1rem;
-    color: var(--cor-do-cabecalho);
+    color: var(--branco);
 }
 
 .banner__pesquisa::placeholder {
-    color: var(--cor-do-cabecalho);
+    color: var(--branco);
     font-family: var(--fonte-principal);
     font-size: 0.875rem;
     text-align: center;
