--- a/styles/header.css
+++ b/styles/header.css
@@ -1,5 +1,7 @@
+
+
 .cabecalho {
-    background-color: var(--cor-do-cabecalho);
+    background-color: var(--branco);
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -39,6 +41,7 @@
     display: block;
 }
 
+
 .container__botao {
     display: none;
 }
@@ -46,7 +49,7 @@
 .lista-menu__titulo, .lista-menu__itens {
     padding: 1em;
     padding-left: 2em;
-    background-color: var(--cor-do-cabecalho);
+    background-color: var(--branco);
 }
 
 .lista-menu {
